--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.edu.uz.currency.currencyapp.MainActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+        <android.support.v7.widget.CardView style="@style/button_card_main">
+
+            <Button
+                android:id="@+id/button_exchange_rates"
+                style="@style/main_button_style"
+                android:text="@string/exchange_rates" />
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView style="@style/button_card_main">
+
+            <Button
+                android:id="@+id/button_calculator"
+                style="@style/main_button_style"
+                android:text="@string/exchange_calculator" />
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView style="@style/button_card_main">
+
+            <Button
+                android:id="@+id/button_atms"
+                style="@style/main_button_style"
+                android:text="@string/ATM" />
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+</layout>
