--- a/app/src/main/res/layout/row_currency.xml
+++ b/app/src/main/res/layout/row_currency.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="currency"
             type="com.edu.uz.currency.currencyapp.model.Currency"/>
     </data>
-
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="16dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:cardElevation="4dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="60dp"
+        android:minHeight="40dp"
         android:layout_margin="4dp"
         android:orientation="horizontal">
 
@@ -23,7 +31,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:textColor="@android:color/black"
                 android:text="@{currency.code}"
                 tools:text = "AUD"/>
@@ -49,4 +57,5 @@
             android:layout_weight="1"/>
 
     </LinearLayout>
+    </android.support.v7.widget.CardView>
 </layout>
