--- a/app/src/main/res/layout/activity_currency_calculator.xml
+++ b/app/src/main/res/layout/activity_currency_calculator.xml
@@ -6,132 +6,77 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="com.edu.uz.currency.currencyapp.ui.CurrencyCalculatorActivity"
-        android:weightSum="1">
+        android:weightSum="1"
+        tools:context="com.edu.uz.currency.currencyapp.ui.CurrencyCalculatorActivity">
 
         <LinearLayout
             android:id="@+id/exchangeFromLayout"
             android:layout_width="match_parent"
-            android:layout_height="123dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="vertical"
-            android:weightSum="1">
+            android:padding="8dp">
 
-            <TextView
-                android:id="@+id/exchangeAmountTextView"
+
+            <Spinner
+                android:id="@+id/fromCurrencySpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/calculator_exchange_from_title"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginEnd="32dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="5dp" />
+
+            <EditText
+                android:id="@+id/exchangeAmountEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:ems="10"
+                android:inputType="numberSigned"
                 android:textAlignment="center"
-                android:textSize="24sp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="78dp"
-                android:layout_weight="0.37"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <EditText
-                    android:id="@+id/exchangeAmountEditText"
-                    android:layout_width="225dp"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="@string/calculator_exchange_from_text"
-                    android:inputType="numberSigned"
-                    android:textAlignment="center" />
-
-                <Spinner
-                    android:id="@+id/fromCurrencySpinner"
-                    android:layout_width="211dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp" />
-
-            </LinearLayout>
-
+                tools:text="100.00" />
         </LinearLayout>
+
+
+        <ImageButton
+            android:id="@+id/swap_currencies_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="10dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/swap_hori_48dp" />
 
         <LinearLayout
             android:id="@+id/exchangeToLayout"
             android:layout_width="match_parent"
-            android:layout_height="106dp"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="right"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/toCurrencyTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/calculator_exchange_to_title"
-                    android:textAlignment="center"
-                    android:textSize="24sp" />
-
-                <Spinner
-                    android:id="@+id/toCurrencySpinner"
-                    android:layout_width="213dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp" />
-
-                <CheckBox
-                    android:id="@+id/toPlnCheckBox"
-                    android:layout_width="212dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/calculator_checkbox_text"
-                    android:textAlignment="center" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/resultLayout"
-            android:layout_width="match_parent"
-            android:layout_height="68dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/calculator_result_title"
-                android:textAlignment="center"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/resultText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/calculator_result_text"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="77dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="0.44">
+            android:padding="8dp">
 
-            <android.support.v7.widget.CardView style="@style/button_card_main">
+            <Spinner
+                android:id="@+id/toCurrencySpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginEnd="32dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="10dp" />
 
-                <Button
-                    style="@style/main_button_style"
-                    android:id="@+id/calculateButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/calculator_button_text" />
-            </android.support.v7.widget.CardView>
+            <EditText
+                android:clickable="false"
+                android:editable="false"
+                android:focusable="false"
+                android:id="@+id/exchangeToEdittext"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:ems="10"
+                android:inputType="numberSigned"
+                android:textAlignment="center"
+                tools:text="100.00" />
 
         </LinearLayout>
-
     </LinearLayout>
 </layout>
